--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -215,12 +215,13 @@ h3 {
     margin-bottom: 40px;
     border-radius: 5%;
     padding: 15px;
+    min-height: 440px;
     height: fit-content; /*400px;*/
     flex: 25%;
 }
 
 .equipe_icons__div > .equipe_icon > h4 {
-    margin-top: 0;
+    /*margin-top: 0;*/
     color: #00337B;
     font-size: 1em;
 }
@@ -232,7 +233,7 @@ h3 {
 }
 
 .equipe_icon .avatar__img{
-    height: 90px;
+    height: 130px;
 }
 
 
