--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -85,29 +85,29 @@
                 <div class="equipe_icons__div">
                     <div class="equipe_icon">
                         <img class="avatar__img" src="{{ asset('assets/images/baptiste.png') }} " alt="avatar">
-                        <h4>Baptiste Pautrat</h4>
-                        <p>Chef de Projet & Ingenieur technique</p>
-                        <p>Conduit des projets digitaux et
+                        <h4 class="equipe__name">Baptiste Pautrat</h4>
+                        <p class="equipe__title">Chef de Projet & Ingenieur technique</p>
+                        <p class="equipe__desc">Conduit des projets digitaux et
                             de gestion de flux.</p>
-                        <p>En alternance chez BBGR</p>
+                        <p class="equipe__poste">En alternance chez BBGR</p>
                     </div>
                     <div class="equipe_icon">
                         <img class="avatar__img" src="{{ asset('assets/images/victorine.png') }} " alt="avatar">
-                        <h4>Victorine Doral</h4>
-                        <p>Responsable Qualité &
+                        <h4 class="equipe__name" >Victorine Doral</h4>
+                        <p class="equipe__title" >Responsable Qualité &
                             Ingénieur technique</p>
-                        <p>Développe et optimise des
+                        <p class="equipe__desc" >Développe et optimise des
                             logiciels en IA.</p>
-                        <p>En alternance chez Jouve</p>
+                        <p class="equipe__poste">En alternance chez Jouve</p>
                     </div>
                     <div class="equipe_icon">
                         <img class="avatar__img" src="{{ asset('assets/images/gaston.png') }} " alt="avatar">
-                        <h4>Gaston Deseine</h4>
-                        <p>Responsable Fonctionnel
+                        <h4 class="equipe__name">Gaston Deseine</h4>
+                        <p class="equipe__title" >Responsable Fonctionnel
                             & Ingénieur technique</p>
-                        <p>Conduit des projets industriels
+                        <p class="equipe__desc">Conduit des projets industriels
                             et optimise des processus</p>
-                        <p>En alternance chez Renault</p>
+                        <p class="equipe__poste">En alternance chez Renault</p>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                         <li>
                             <i class="icon envelope"></i>
                             <h5>Mail</h5>
-                            <p> <a href="mailto:lean_tech@centralelille.fr">lean_tech@centralelille.fr</a></p>
+                            <p> <a href="mailto:lean_tech@centralelille.fr">leantech.centralelille@gmail.com</a></p>
                         </li>
                         <li>
                             <img class="centrale_contact__img" src="{{ asset('assets/images/centrale-nobg.png') }} " alt="centrale">
