add linkedin badges

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -85,7 +85,11 @@
                 <div class="equipe_icons__div">
                     <div class="equipe_icon">
                         <img class="avatar__img" src="{{ asset('assets/images/baptiste.png') }} " alt="avatar">
-                        <h4 class="equipe__name">Baptiste Pautrat</h4>
+                        <h4 class="equipe__name">Baptiste Pautrat
+                            <a href="https://www.linkedin.com/in/baptiste-pautrat-18672b152/" target="_blank">
+                                <i class="linkedin icon"></i>
+                            </a>
+                        </h4>
                         <p class="equipe__title">Chef de Projet & Ingenieur technique</p>
                         <p class="equipe__desc">Conduit des projets digitaux et
                             de gestion de flux.</p>
@@ -93,7 +97,11 @@
                     </div>
                     <div class="equipe_icon">
                         <img class="avatar__img" src="{{ asset('assets/images/victorine.png') }} " alt="avatar">
-                        <h4 class="equipe__name" >Victorine Doral</h4>
+                        <h4 class="equipe__name" >Victorine Doral
+                            <a href="https://www.linkedin.com/in/victorine-doral/" target="_blank">
+                                <i class="linkedin icon"></i>
+                            </a>
+                        </h4>
                         <p class="equipe__title" >Responsable Qualité &
                             Ingénieur technique</p>
                         <p class="equipe__desc" >Développe et optimise des
@@ -102,7 +110,11 @@
                     </div>
                     <div class="equipe_icon">
                         <img class="avatar__img" src="{{ asset('assets/images/gaston.png') }} " alt="avatar">
-                        <h4 class="equipe__name">Gaston Deseine</h4>
+                        <h4 class="equipe__name">Gaston Deseine
+                            <a href="https://www.linkedin.com/in/gaston-deseine/" target="_blank">
+                                <i class="linkedin icon"></i>
+                            </a>
+                        </h4>
                         <p class="equipe__title" >Responsable Fonctionnel
                             & Ingénieur technique</p>
                         <p class="equipe__desc">Conduit des projets industriels
