--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -15,7 +15,7 @@
                 <hr>
                 <div class="actions button">
                     <button onclick="scrollToId('#Projet')" class="ui projet__button button">Notre projet</button>
-                    <button class="ui plaquette__button button" onclick="window.open('{{ asset('assets/LeanTech.pdf') }}','_blank')">Notre maquette</button>
+                    <button class="ui plaquette__button button" onclick="window.open('{{ asset('assets/LeanTech.pdf') }}','_blank')">Notre plaquette</button>
                 </div>
             </div>
             <div class="ui fluid borderless menu">
